# hotel_booking_service

./: .env.sample  .gitignore  Dockerfile  docker-compose.yaml  fixture.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
booking/: admin.py  apps.py  filters.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
booking/migrations/: 0001_initial.py  0002_initial.py  0004_alter_booking_id_alter_booking_status.py
booking/tests/: test_flows.py  test_serializers.py  test_tasks.py  test_views.py
guest/: models.py  serializers.py  urls.py  views.py
guest/migrations/: 0001_initial.py  0002_alter_guest_id.py
guest/tests/: tests.py
hotel_booking_service/: celery.py  settings.py  urls.py
notifications/: models.py  tasks.py  telegram.py
notifications/management/commands/: run_telegram_bot.py
notifications/migrations/: 0001_initial.py
notifications/services/: telegram.py
payment/: apps.py  exceptions.py  models.py  serializers.py  tasks.py  urls.py  views.py
payment/migrations/: 0001_initial.py  0002_alter_payment_id_alter_payment_session_url_and_more.py
payment/services/: payment_service.py  stripe_service.py
payment/tests/: test_serializers.py
room/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
room/migrations/: 0001_initial.py  0002_alter_room_id.py
