[project]
name = "hotel-booking-service"
version = "0.1.0"
description = ""
authors = [
    {name = "vadym-zahrebelnyi",email = "zahrebelnyivadym@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "django (>=5.1,<6.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "django-celery-beat (>=2.8.1,<3.0.0)",
    "stripe (>=14.1.0,<15.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "django-filter (>=25.2,<26.0)",
    "aiogram (>=3.24.0,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "ruff (>=0.14.11,<0.15.0)",
    "django-debug-toolbar (>=6.1.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    "migrations",
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "DJ",   # flake8-django
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
    "T20",  # flake8-print
]

ignore = [
    "E501",
    "D",
    "RUF012",
]

[tool.ruff.lint.isort]
known-first-party = ["hotel_booking_service"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"settings.py" = ["E402", "F403", "F405"]
"**/tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
